Different onboarding screens applied

--- a/app/src/main/res/values/onboarding_colors.xml
+++ b/app/src/main/res/values/onboarding_colors.xml
@@ -3,8 +3,8 @@
     <color name="color1">#ffaf4e</color>
     <color name="color2">#046F48</color>
     <color name="color3">#F66515</color>
-    <color name="color4">#FA8A33</color>
+    <color name="color4">#FFBE97</color>
     <color name="color5">#CEC6B1</color>
     <color name="color6">#361C19</color>
-    <color name="color7">#2F9B7C</color>
+    <color name="color7">#1FB090</color>
 </resources>
